--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,13 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  background-image: url(../assets/418495.jpg);
+  background-repeat: no-repeat;
+  object-fit: fill;
+  background-size: cover;
+  background-position: center;
+  margin: 0;
+
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -11,23 +18,6 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
