--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,19 +1,25 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-  background-image: url(../assets/418495.jpg);
-  background-repeat: no-repeat;
-  object-fit: fill;
-  background-size: cover;
-  background-position: center;
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+* ,
+*::before,
+*::after {
+  box-sizing: border-box;
   margin: 0;
+  padding: 0;
+}
 
-
-  color-scheme: light dark;
+body {
+  background: url(../assets/7917587.jpg) no-repeat center center fixed;
+  background-size: cover;
+  font-family: 'Press Start 2P', system-ui;
+  line-height: 1.5;
   color: rgba(255, 255, 255, 0.87);
+  text-align: center;
   background-color: #242424;
+}
 
+.app,
+#root {
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -26,33 +32,11 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  font-family: inherit;
+  color: inherit;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+button:focus-visible {
+  outline: 1px solid skyblue;
 }
