--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -7,13 +7,16 @@
 }
 
 .card {
-    align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
     background-color: #a28443ad;
     border-radius: 5px;
     margin: 1em;
-    padding: 1em;
-    gap: 2em;
-    width: 15em;
+    padding: 1em; 
+    transform-style: preserve-3d;
+    transition: transform 0.85s;
+    animation: flip-card 0.85s;
 }
 
 img {
@@ -22,80 +25,6 @@ img {
     
 }
   
-  .card:focus {
-    outline: 0;
-  }
-  
-  .card:focus-visible {
-    outline: 1px solid black;
-  }
-  
-  .card:active {
-    scale: 0.95;
-    outline: 0;
-  }
-  
-  .card-container {
-    perspective: 1000px;
-  }
-  
-  .card-container.back .card-inner {
-    transform: rotateY(180deg);
-  }
-  
-  .card-inner {
-    position: relative;
-    text-align: center;
-    transform-style: preserve-3d;
-    transition: transform 0.85s;
-    animation: flip-card 0.85s;
-  }
-  
-  .card-back {
-    transform: rotateY(180deg);
-  }
-  
-  .card-front,
-  .card-back {
-    position: absolute;
-    backface-visibility: hidden;
-  }
-  
-  .card-image {
-    width: 100%;
-    height: 200px;
-    object-fit: contain;
-    user-select: none;
-  }
-  
-  .card[data-shiny="true"] .card-name .name {
-    background: linear-gradient(120deg, gold 0%, lightyellow 100%);
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-  
-  .shiny-symbol {
-    position: absolute;
-    top: 6px;
-    left: 2px;
-    width: 32px;
-    height: 32px;
-    background: url("../assets/sparkle.webp");
-  }
-  
-  .card-name {
-    letter-spacing: -0.02em;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
-    padding: 8px 6px;
-    font-weight: bold;
-    max-width: 100%;
-    text-transform: capitalize;
-    color: white;
-    font-size: 15px;
-  }
   @keyframes flip-card {
     from {
       transform: rotateY(180deg);
