Font styles and before after styles

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,7 +14,7 @@ body {
   opacity: 0.95;
   font-family: 'Press Start 2P', system-ui;
   line-height: 1.5;
-  color: rgb(255, 255, 255);
+  color: #ffffff;
   text-align: center;
   background-color: #242424;
 }
