--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -58,3 +58,21 @@
     animation: logo-spin infinite 20s linear;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .header {
+   width: 100%;
+   gap: 2em;
+
+  }
+
+  .logo {
+    width: 2em;
+    height: 2em;
+  }
+
+  .strong-hover-shake:hover {
+    animation: none
+  }
+
+}
