--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -22,3 +22,10 @@ button {
     margin: 2em;
     padding: 1em;
 }
+
+@media only screen and (max-width: 600px) {
+
+    .modal-content {
+        max-width: 75vw;
+    }
+}
