--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -1,31 +1,29 @@
-
 .modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal-content {
-    background: rgb(223, 26, 26);
-    padding: 1em;
-    border-radius: 10px;
+  background: rgb(223, 26, 26);
+  padding: 1em;
+  border-radius: 10px;
 }
 
 button {
-    margin: 2em;
-    padding: 1em;
+  margin: 2em;
+  padding: 1em;
 }
 
 @media only screen and (max-width: 600px) {
-
-    .modal-content {
-        max-width: 75vw;
-    }
+  .modal-content {
+    max-width: 75vw;
+  }
 }
