--- a/src/styles/Scoreboard.css
+++ b/src/styles/Scoreboard.css
@@ -1,20 +1,19 @@
 .scoreboard {
-    display: flex;
-    justify-content: center;
-    gap: 4em;
-    text-transform: uppercase;
-    font-size: 1.5em;
-    margin: 1em;
+  display: flex;
+  justify-content: center;
+  gap: 4em;
+  text-transform: uppercase;
+  font-size: 1.5em;
+  margin: 1em;
 }
 
 .number {
-    color: red
+  color: red;
 }
 
 @media only screen and (max-width: 600px) {
-
-    .scoreboard {
-        gap: 2em;
-        font-size: 1em;
-    }
+  .scoreboard {
+    gap: 2em;
+    font-size: 1em;
+  }
 }
